--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/splash_bottom_margin"
-        android:background="@color/alpha_white"
+        android:background="@color/alpha_white_0"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/splash_bottom_padding">
