--- a/app/src/main/res/layout/layout_banner.xml
+++ b/app/src/main/res/layout/layout_banner.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.fangxu.dota2helper.ui.widget.FlipperBanner
-    android:id="@+id/banner"
+<!--<com.fangxu.dota2helper.ui.widget.FlipperBanner-->
+    <!--android:id="@+id/banner"-->
+    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="@dimen/banner_height"-->
+    <!--app:fb_dot_normal="@drawable/dot_normal"-->
+    <!--app:fb_dot_selected="@drawable/dot_selected"-->
+    <!--app:fb_show_dot="true"-->
+    <!--app:fb_show_title="true"-->
+    <!--app:fb_title_background="@color/black_half_transparent"/>-->
+
+<com.bigkoo.convenientbanner.ConvenientBanner
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/banner"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/banner_height"
-    app:fb_dot_normal="@drawable/dot_normal"
-    app:fb_dot_selected="@drawable/dot_selected"
-    app:fb_show_dot="true"
-    app:fb_show_title="true"
-    app:fb_title_background="@color/black_half_transparent"/>
+    android:layout_height="@dimen/banner_height"/>
+
