--- a/app/src/main/res/layout/youku_player_play_control.xml
+++ b/app/src/main/res/layout/youku_player_play_control.xml
@@ -31,7 +31,8 @@
             android:layout_marginRight="@dimen/dimen_5dp"
             android:layout_toLeftOf="@id/ib_detail_play_full"
             android:gravity="center_vertical"
-            app:vqt_text_color="@color/white" />
+            app:vqt_text_color="@color/white"
+            app:vqt_text_view_background="#bf000000"/>
 
         <TextView
             android:id="@+id/total_time"
