--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="white">#ffffff</color>
     <color name="grey">#eeeeee</color>
     <color name="grey_light">#f5f5f5</color>
+    <color name="grey_dark">#666666</color>
     <color name="light_red">#f24b17</color>
     <color name="dark_red">#c62828</color>
 
