--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,8 @@
     <color name="grey_dark">#666666</color>
     <color name="light_red">#f24b17</color>
     <color name="dark_red">#c62828</color>
+    <color name="black">#000000</color>
+    <color name="black_light">#0e0e0e</color>
 
     <color name="color_webview_progressbar">#80ffffff</color>
 
