--- a/app/src/main/res/layout/profile_content_view.xml
+++ b/app/src/main/res/layout/profile_content_view.xml
@@ -1,75 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@color/grey"
               android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_watched_video"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/profile_item_height"
-        android:background="@drawable/selector_white_grey"
-        android:gravity="center_vertical"
-        android:paddingLeft="@dimen/base_margin"
-        android:text="@string/watch_video_history"/>
+    <com.fangxu.dota2helper.ui.widget.ProfileItemLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:pil_text="@string/watch_video_history"/>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_1dp"/>
 
-    <TextView
-        android:id="@+id/tv_cache_video"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/profile_item_height"
-        android:background="@drawable/selector_white_grey"
-        android:gravity="center_vertical"
-        android:paddingLeft="@dimen/base_margin"
-        android:text="@string/cached_video"/>
+    <com.fangxu.dota2helper.ui.widget.ProfileItemLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:pil_text="@string/cached_video"/>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_1dp"/>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/profile_item_height"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_clear_cache"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/profile_item_height"
-            android:background="@drawable/selector_white_grey"
-            android:gravity="center_vertical"
-            android:paddingLeft="@dimen/base_margin"
-            android:text="@string/clear_cache"/>
-    </RelativeLayout>
+    <com.fangxu.dota2helper.ui.widget.ProfileItemLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:pil_text="@string/clear_cache"/>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/base_margin"/>
 
-    <TextView
-        android:id="@+id/tv_my_github"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/profile_item_height"
-        android:background="@drawable/selector_white_grey"
-        android:gravity="center_vertical"
-        android:paddingLeft="@dimen/base_margin"
-        android:text="@string/my_github"/>
+    <com.fangxu.dota2helper.ui.widget.ProfileItemLayout
+        android:id="@+id/pil_my_github"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:pil_text="@string/my_github"/>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_1dp"/>
 
-    <TextView
-        android:id="@+id/tv_my_project"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/profile_item_height"
-        android:background="@drawable/selector_white_grey"
-        android:gravity="center_vertical"
-        android:paddingLeft="@dimen/base_margin"
-        android:text="@string/my_project_mainpage"/>
+    <com.fangxu.dota2helper.ui.widget.ProfileItemLayout
+        android:id="@+id/pil_my_project"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:pil_text="@string/my_project_mainpage"/>
 
 </LinearLayout>
