--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -62,6 +62,7 @@
 
     <!-- profile -->
     <dimen name="profile_item_height">50dp</dimen>
+    <dimen name="profile_right_arrow_size">18dp</dimen>
 
     <!-- google -->
     <dimen name="refresh_header_height_google">100dp</dimen>
