--- a/app/src/main/res/layout/activity_news_video.xml
+++ b/app/src/main/res/layout/activity_news_video.xml
@@ -13,10 +13,10 @@
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dimen_5dp"
+        android:layout_marginBottom="@dimen/base_little_margin"
         android:layout_marginLeft="@dimen/dimen_10dp"
         android:layout_marginRight="@dimen/dimen_10dp"
-        android:layout_marginTop="@dimen/dimen_5dp"
+        android:layout_marginTop="@dimen/base_little_margin"
         android:gravity="center"
         android:includeFontPadding="false"
         android:lineSpacingExtra="@dimen/dimen_2dp"
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/dimen_5dp"
+        android:layout_marginTop="@dimen/base_little_margin"
         android:textColor="@color/black"
         android:textSize="@dimen/news_video_room_date_size"
         android:textStyle="bold"/>
@@ -47,7 +47,7 @@
         android:id="@+id/tv_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dimen_5dp"
+        android:layout_marginBottom="@dimen/base_little_margin"
         android:layout_marginLeft="@dimen/dimen_10dp"
         android:layout_marginRight="@dimen/dimen_10dp"
         android:layout_marginTop="@dimen/dimen_10dp"
