--- a/app/src/main/res/layout/layout_banner.xml
+++ b/app/src/main/res/layout/layout_banner.xml
@@ -9,13 +9,13 @@
     banner:bb_barColor="@color/black_half_transparent"
     banner:bb_barPaddingBottom="@dimen/dimen_3dp"
     banner:bb_barPaddingTop="@dimen/dimen_3dp"
-    banner:bb_indicatorGap="@dimen/dimen_5dp"
+    banner:bb_indicatorGap="@dimen/base_little_margin"
     banner:bb_indicatorGravity="RIGHT"
-    banner:bb_indicatorHeight="@dimen/dimen_5dp"
+    banner:bb_indicatorHeight="@dimen/base_little_margin"
     banner:bb_indicatorSelectRes="@drawable/dot_selected"
     banner:bb_indicatorStyle="DRAWABLE_RESOURCE"
     banner:bb_indicatorUnselectRes="@drawable/dot_normal"
-    banner:bb_indicatorWidth="@dimen/dimen_5dp"
+    banner:bb_indicatorWidth="@dimen/base_little_margin"
     banner:bb_isAutoScrollEnable="true"
     banner:bb_isIndicatorShow="true"
     banner:bb_isLoopEnable="true"
