--- a/app/src/main/res/layout/item_watched_video.xml
+++ b/app/src/main/res/layout/item_watched_video.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/card_view_dimen"
-                android:foreground="?attr/selectableItemBackground">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:foreground="?attr/selectableItemBackground"
+    android:paddingLeft="@dimen/dimen_10dp"
+    android:paddingRight="@dimen/dimen_10dp">
 
     <RelativeLayout
         android:id="@+id/rl_background_container"
@@ -17,8 +18,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/color_primary"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop" />
     </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_0.5dp"
+        android:layout_below="@id/rl_background_container"
+        android:background="@color/grey_light" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -36,14 +43,14 @@
             android:includeFontPadding="false"
             android:maxLines="2"
             android:textColor="@color/title_text"
-            android:textSize="@dimen/title_text_size"/>
+            android:textSize="@dimen/title_text_size" />
 
         <TextView
             android:id="@+id/tv_watched_percent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/base_little_margin"
-            android:textSize="@dimen/content_text_size"/>
+            android:textSize="@dimen/content_text_size" />
     </LinearLayout>
 
 </RelativeLayout>
