--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,8 +9,13 @@
     <color name="title_text">#212121</color>
     <color name="content_text">#727272</color>
 
+    <color name="small_circle_blue">#4cb7ff</color>
+    <color name="small_circle_red">#fc382e</color>
+    <color name="small_circle_orange">#ff9500</color>
+
     <color name="alpha_white_0">#1affffff</color>
     <color name="alpha_white_1">#8affffff</color>
+    <color name="alpha_white_2">#eeffffff</color>
     <color name="white">#ffffff</color>
     <color name="grey">#eeeeee</color>
     <color name="grey_light">#f5f5f5</color>
