--- a/app/src/main/res/layout/activity_news_video.xml
+++ b/app/src/main/res/layout/activity_news_video.xml
@@ -21,7 +21,7 @@
         android:includeFontPadding="false"
         android:lineSpacingExtra="@dimen/dimen_2dp"
         android:textColor="@color/black"
-        android:textSize="@dimen/news_video_room_title_size"
+        android:textSize="@dimen/title_text_size_big"
         android:textStyle="bold"/>
 
     <TextView
@@ -31,7 +31,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/base_little_margin"
         android:textColor="@color/black"
-        android:textSize="@dimen/news_video_room_date_size"
+        android:textSize="@dimen/content_text_size"
         android:textStyle="bold"/>
 
     <View
@@ -53,7 +53,7 @@
         android:layout_marginTop="@dimen/base_margin"
         android:lineSpacingExtra="@dimen/dimen_3dp"
         android:textColor="@color/black_light"
-        android:textSize="@dimen/news_video_room_content_size"/>
+        android:textSize="@dimen/content_text_size_big"/>
 
     <com.youku.player.base.YoukuPlayerView
         android:id="@+id/youku_player"
